Fix issue with top bar jumping when user menu is expanded

--- a/src/App.css
+++ b/src/App.css
@@ -35,6 +35,7 @@ textarea {
 .AppContent {
   width: 1100px;
   margin: 0 auto;
+  position: relative;
 }
 
 @media (max-width: 1100px) {
